Bug 341585 - Can't use an absolute path to a file as a notification sound
Summary: Can't use an absolute path to a file as a notification sound
Status: RESOLVED FIXED
Alias: None
Product: phonon-backend-vlc
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 0.8
Assignee: Olivier Goffart
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-12-05 16:48 UTC by Anthony Vital
Modified: 2015-03-19 16:32 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Anthony Vital 2014-12-05 16:48:48 UTC
If I want to specify a custom file as a sound notification with an absolute path (for example by using the file picker), it doesn't work. 
If the file I want to use is /home/username/test.ogg, phonon(-vlc in my case) complains that it can't open //home/username/.local/share//home/username/test.ogg.
Only relative paths from /usr/share/sounds/ seem to work.

Reproducible: Always

Steps to Reproduce:
1. Open kcmshell5 kcmnotify in a console 
2. Pick a source and a notification, enable "play a sound"
3. Use the file picker to choose a file.  Now the file path is abosolute.
4. Click "play"

Actual Results:  
No sound, phonon-vlc complains it can't find //home/username/.local/share/*absolute path to file specified*

Expected Results:  
This should work.
Comment 1 Mikhail Ivchenko 2014-12-09 16:57:29 UTC
Commented by GCI student: 
Hello. Possibly it's this bug again: https://bugs.kde.org/show_bug.cgi?id=291333
Setting relative path works for me. (KF5 install from Kubuntu CI unstable daily, System Settings version: 5.1.90 )