fix setting a schemeless absolute url as a source not working

BUG: 341585
REVIEW: 123052